<resources>
    <string name="app_name">Material Design NavigationView</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- NavigationView drawer menu -->
    <string name="drawer_home">Home</string>
    <string name="drawer_contacts">Contacts</string>
    <string name="drawer_companies">Companies</string>
    <string name="drawer_contracts">Contracts</string>
    <string name="drawer_section_additional">Additional</string>
    <string name="drawer_messages">Messages</string>
    <string name="placeholder_username">Mike Smith</string>
    <string name="placeholder_email">placeholder@email.com</string>
</resources>
