<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/drawer_contacts" />
        <item
            android:id="@+id/nav_companies"
            android:icon="@drawable/ic_business"
            android:title="@string/drawer_companies" />
        <item
            android:id="@+id/nav_contracts"
            android:icon="@drawable/ic_receipt"
            android:title="@string/drawer_contracts" />
    </group>

    <item android:title="@string/drawer_section_additional">
        <menu>
            <item
                android:icon="@drawable/ic_chat"
                android:title="@string/drawer_messages" />
        </menu>
    </item>
</menu>